--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ html {
 #root {
     position: relative;
     z-index: 1;
+    min-height: 100vh;
     overflow-y: auto;
     scrollbar-width: none;
 }
